--- a/baseline.ipynb
+++ b/baseline.ipynb
@@ -71,8 +71,8 @@
     "        entity_set.add(s.replace(\"<http://www.yago-knowledge.org/\",\"\").replace(\">\",\"\"))\n",
     "        entity_set.add(o.replace(\"<http://www.yago-knowledge.org/\",\"\").replace(\">\",\"\"))\n",
     "\n",
-    "with open('/yago3-10/yago3-10TransitiveType.tsv', \"w\") as yago310_types:\n",
-    "    with open('/yago3-10/yagoTransitiveType.tsv', \"r\") as yago_types:\n",
+    "with open('/data/yago/yago3-10TransitiveType.tsv', \"w\") as yago310_types:\n",
+    "    with open('/data/yago/yagoTransitiveType.tsv', \"r\") as yago_types:\n",
     "            for line in yago_types:\n",
     "                try:\n",
     "                    x, entity, predicate, cl = line.split()\n",
@@ -93,13 +93,13 @@
     "\n",
     "output_path = '/SDType/'\n",
     "\n",
-    "ntfiles = {'yago' : '/yago3-10/train.nt',\n",
-    "           'freebase' : '/fb15k-237/train.nt'}\n",
-    "output_folder = {'yago' : '/yago3-10/',\n",
-    "           'freebase' : '/fb15k-237/'}\n",
+    "ntfiles = {'yago' : '/data/yago/train.nt',\n",
+    "           'freebase' : '/data/freebase/train.nt'}\n",
+    "output_folder = {'yago' : '/data/yago/',\n",
+    "           'freebase' : '/data/freebase/'}\n",
     "\n",
-    "typefiles = {'yago' : '/yago3-10/yago3-10TransitiveType.tsv',\n",
-    "           'freebase' : '/fb15k-237/freebaseTypes.tsv'}\n",
+    "typefiles = {'yago' : '/data/yago/yago3-10TransitiveType.tsv',\n",
+    "           'freebase' : '/data/freebase/freebaseTypes.tsv'}\n",
     "\n",
     "experiments = {'yago': {\n",
     "           'level-1': ['wordnet_person_100007846', 'wordnet_organization_108008335', 'wordnet_body_of_water_109225146', 'wordnet_product_104007894'],\n",
